# RiceGuard

./: .gitgnore  README.md  dados_ano.csv  main_workflow.py
FastCodigo/: CMakeBuildProcess.sh  CMakeLists.txt  comorodar.txt
FastCodigo/include/io/: csv_reader.h
FastCodigo/include/summary/: summary_generator.h
FastCodigo/include/viab/: analise_viabilidade.h  dia.h  fase.h
FastCodigo/src/: main.cpp
FastCodigo/src/analise/: analise_viabilidade.cpp
FastCodigo/src/config/: fases_cultivo_arroz.json
FastCodigo/src/core_logic/: analise_viabilidade.cpp
FastCodigo/src/io/: csv_reader.cpp
FastCodigo/src/model/io/: csv_reader.cpp  csv_reader.h  json_loader.cpp  json_loader.h
FastCodigo/src/model/summary/: summary_generator.cpp  summary_generator.h
FastCodigo/src/model/viab/: analise_viabilidade.h  dia.h  fase.cpp  fase.h
FastCodigo/src/relatorio/: summary_generator.cpp
FastCodigo/src/summary/: summary_generator.cpp
FastCodigo/src/tests/: teste_analise_viabilidade.cpp
FastCodigo/tests/: teste_analise_viabilidade.cpp
helpers/: posprocessamento.py  preprocessamento.py
preprocessed/: dados_diarios.csv
processados/: analise_detalhada.csv  resumo_mensal.csv  resumo_mensal_cpp.csv
relatorios/: ComeLerRelatorios.txt
